Func for adding/deleting circle resource and passing test
Co-authored-by: Andrew Johnston <72912074+avjohnston@users.noreply.github.com>
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jesus Quezada-Guillen <17693874+jequeza@users.noreply.github.com>
Co-authored-by: Joseph Budina <52386927+josephbudina@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>
Co-authored-by: Kris Litman <56943408+krislitman@users.noreply.github.com>
Co-authored-by: Kyle Schulz <54863905+kylejschulz@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,8 +24,10 @@
 					<p>You are 0 miles from yourself</p>
 		<% else %> 
         <p><%= @distance %> miles from you</p>
-
-        
+				<p><%= button_to "Add this user to your circle!",
+				 circles_path({user_id: @current_user.id, following_id: @user.id}), 
+				 method: :post  if !@circle_ids.include?(@user.id) %></p>
+        <p><%= "This user is in your circle!" if @circle_ids.include?(@user.id) %></p>
 		<% end %>
 			</section>
 
