Add css class for results.

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -63,7 +63,7 @@
 
        <div class="card d-flex text-white bg-dark mb-3 scroll" style="margin-top:15px">
 			  <h5 class="card-header">Search Results</h5>
-				  <div class="card-body">
+				  <div class="card-body results">
 						<h6 class="card-subtitle mb-2 text-muted">You have <%= @search_results.length %> results</h6>
 							<% @search_results.each do |artist| %>
 							<div class="card" style="width: 15rem;">
