make photo a link in recent photos discover page
Co-authored-by: Andrew Johnston <72912074+avjohnston@users.noreply.github.com>
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Kris Litman <56943408+krislitman@users.noreply.github.com>

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -27,7 +27,9 @@
         		<div class="card-body">
               <% @photos.each do |photo| %>
                     <div class="card">
-                      <img class="card-img-top" src="<%=photo.url%>" alt="picture">
+                      <%= link_to profile_path(lookup: photo.user_id) do %>
+                        <img class="card-img-top" src="<%=photo.url%>" alt="picture">
+                      <% end %>
                       <div class="card-body" style="color:black">
                       <%= photo.description %>
                         <p class="card-text"></p>
