--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/dashboard">My Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profiles">My Profile</a>
+          <a class="nav-link" href="/profile">My Profile</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
