--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,11 +9,11 @@
   </section>
 
 	<section id="artist-bio">
-		<!-- 
-		REMOVE THIS LINK ONCE FUNCTIONALITY IS IMPLEMENTED, ITS JUST FOR TESTING 
+		<!--
+		REMOVE THIS LINK ONCE FUNCTIONALITY IS IMPLEMENTED, ITS JUST FOR TESTING
     Lookup ID is just for testing
 		 -->
-		<p>Link to other page  <%= link_to("other profile", profile_path(lookup: "2")) %> </p>
+		<p>Link to other page  <%= link_to("other profile", profile_path(lookup: 2)) %> </p>
 
     <section id='profilepicture'>
       <p><%= image_tag @profile_data.profile_photo unless @profile_data.profile_photo.nil? %></p>
@@ -22,10 +22,10 @@
       <section id="distance">
 		<% if @user.id == @current_user.id %>
 					<p>You are 0 miles from yourself</p>
-		<% else %> 
+		<% else %>
         <p><%= @distance %> miles from you</p>
 				<p><%= button_to "Add this user to your circle!",
-				 circles_path({user_id: @current_user.id, following_id: @user.id}), 
+				 circles_path({user_id: @current_user.id, following_id: @user.id}),
 				 method: :post  if !@circle_ids.include?(@user.id) %></p>
         <p><%= "This user is in your circle!" if @circle_ids.include?(@user.id) %></p>
 		<% end %>
@@ -67,4 +67,3 @@
 	</section>
 
 <% end %>
-
