--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -8,25 +8,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Discover</a>
+          <a class="nav-link active" aria-current="page" href="/discover">Discover</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/galleries">My Galleries</a>
+          <a class="nav-link active" href="/galleries">My Galleries</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/dashboard">My Dashboard</a>
+          <a class="nav-link active" href="/dashboard">My Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profiles">My Profile</a>
+          <a class="nav-link active" href="/profile">My Profile</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Settings
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="">  </li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#"><%= link_to "Log Out", logout_path, method: :post %></a></li>
+            <%= link_to "Log Out", logout_path, method: :post, class: "dropdown-item" %></a></li>
           </ul>
         </li>
         <li class="nav-item">
