Add style fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,7 +89,7 @@ textarea {
 // }
 
 .background {
- background-image: url('https://i.pinimg.com/originals/75/74/54/75745413b2550fbd223522a642af0fea.jpg');
+ background-image: url('https://wallpaperaccess.com/full/130134.jpg');
 }
 
 .blue_glow { color: #5BCDF8;
