--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,7 +8,7 @@
 <body>
 
 <center>
-<h1 style="color:black;"> <%= @user.username%>'s Dashboard </h1>
+<h1 class="font-weight-light mb-4 font-italic text-white"> <%= @user.username%>'s Dashboard </h1>
 </center>
 
 <div class="container">
