--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/nav_bar' %>
 <center>
-  <h1 class="font-weight-light mb-4 font-italic text-white"> <%= current_user.username %> Discover Page</h1>
+  <h1 class="font-weight-light mb-4 font-italic text-white"> <%= current_user.username %>'s Discover Page</h1>
 </center>
 
 <div class="container">
