Added test for recent photos and commented out artist poro. Coverage at 97
Co-authored-by: Andrew Johnston <72912074+avjohnston@users.noreply.github.com>
Co-authored-by: Joseph Budina <52386927+josephbudina@users.noreply.github.com>
Co-authored-by: Kyle Schulz <54863905+kylejschulz@users.noreply.github.com>

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -25,17 +25,19 @@
         <div class="card text-white bg-dark mb-3 scroll-2" style="width: 100%;margin-top: 10px;text-align: center;margin-left: auto; margin-right: auto;" id="my-feed">
         	<h5 class="card-header"> Recent Photos</h5>
         		<div class="card-body">
-              <% @photos.each do |photo| %>
-                    <div class="card">
-                      <%= link_to profile_path(lookup: photo.user_id) do %>
-                        <img class="card-img-top" src="<%=photo.url%>" alt="picture">
-                      <% end %>
-                      <div class="card-body" style="color:black">
-                      <%= photo.description %>
-                        <p class="card-text"></p>
-                      </div>
-                    </div><br>
-              <% end %>
+              <div class='recent_photos'>
+                <% @photos.each do |photo| %>
+                  <div class="card">
+                    <%= link_to profile_path(lookup: photo.user_id) do %>
+                      <img class="card-img-top" src="<%=photo.url%>" alt="picture">
+                    <% end %>
+                    <div class="card-body" style="color:black">
+                    <%= photo.description %>
+                      <p class="card-text"></p>
+                    </div>
+                  </div><br>
+                <% end %>
+              </div>
         		</div>
         </div>
 
