Styled Profile Page
Co-Authored-By: Jake Volpe <62768837+javolpe@users.noreply.github.com>
Co-Authored-By: Andrew Johnston <72912074+avjohnston@users.noreply.github.com>
Co-Authored-By: Joseph Budina <52386927+josephbudina@users.noreply.github.com>

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,3 +95,9 @@ textarea {
 .blue_glow { color: #5BCDF8;
   text-shadow: 1px 1px 2px black, 0 0 10px #5BCDF8, 0 0 5px #5BCDF8;
 }
+
+.cropped1 {
+  width: 200px; /* width of container */
+  height: 200px; /* height of container */
+  object-fit: cover;
+}
