--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,7 +67,7 @@
 						<h6 class="card-subtitle mb-2 text-muted"></h6>
 							<div class="card" style="width: 15rem;">
 								<div class="card-img-top" alt="profile photo">
-									<img class="card-img-top" src="<%= @profile_data.profile_photo unless @profile_data.profile_photo.nil? %>" alt="Card image cap">
+									<img class="card-img-top" id="profilepicture" src="<%= @profile_data.profile_photo unless @profile_data.profile_photo.nil? %>" alt="Card image cap">
 								</div>
 								<div class="card-body background">
 									<div class="card-text" style="color:black">
