--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
-<h1>LEVEL</h1>
-<p>mission goes here<p>
+<br><br>
+<center>
+  <img src="https://i.imgur.com/vR7YuGL.png" alt="lvl"> 
+</center><br><br>
 
 <center>
   <section class="login-form">
