--- a/app/views/shared/_login.html.erb
+++ b/app/views/shared/_login.html.erb
@@ -1,1 +1,1 @@
-<%= button_to "Log in/Register with Google", "auth/google_oauth2" %>
+<%= button_to "Log in/Register with Google", "auth/google_oauth2", class: "btn btn-dark" %>
