Fix styling for photos on discover
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jake Volpe <62768837+javolpe@users.noreply.github.com>
Co-authored-by: Jesus Quezada-Guillen <17693874+jequeza@users.noreply.github.com>
Co-authored-by: Joseph Budina <52386927+josephbudina@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>
Co-authored-by: Kris Litman <56943408+krislitman@users.noreply.github.com>
Co-authored-by: Kyle Schulz <54863905+kylejschulz@users.noreply.github.com>

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -11,7 +11,7 @@
         		<div class="card-body">
               <% @profiles.each do |profile| %>
                     <div class="card">
-                      <img class="card-img-top" src="<%= profile.profile_photo %>" alt="picture">
+                      <img class="card-img-top" src="<%= profile.galleries.first.photos.first.url %>" alt="picture">
                       <div class="card-body">
                         <%= link_to profile.username, profile_path(lookup: profile.id) %>
                         <h5>Zipcode: <%= profile.zipcode %></h5>
@@ -71,8 +71,8 @@
 							<% @search_results.each do |artist| %>
 							<div class="card" style="width: 15rem;">
 							  <div class="card-img-top" alt="profile photo">
-									<%= link_to profile_path(artist) do %>
-										<%= image_tag "#{artist.profile_photo}" %>
+									<%= link_to profile_path(lookup: artist) do %>
+										<%= image_tag "#{artist.galleries.first.photos.first.url}" %>
 									<% end %>
                     <%=  current_user.distance(artist.id) %>
 								</div>
