--- a/app/views/shared/_registration.html.erb
+++ b/app/views/shared/_registration.html.erb
@@ -3,7 +3,7 @@
   <div class="container p-3 my-3 border">
     <%= form_with model: @user, local: true do |f| %>
         <%= f.text_field :username, {class:"form-control", placeholder:"Enter Blog Name"} %>
-        <%= f.number_field :zip, {class:"form-control", placeholder:"Enter Zip Code"} %><br><br>
+        <%= f.number_field :zip, {class:"form-control", placeholder:"Enter Zip Code"} %><br><br><br>
         <%= f.text_field :bio, {class:"form-control", placeholder:"Enter Artist Bio"} %>
         <%= f.text_field :photo_description, {class:"form-control", placeholder:"Enter description of your photo", required: true} %><br><br>
         <%= f.label 'upload your profile picture'%>
