--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
 
-<h1><center>Registration</center></h1>
+<h1><center style="color:white">Registration</center></h1>
 <%= render partial: "/shared/registration" %>
