--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,8 +23,8 @@
 							<% @circle.each do |user| %>
 							<div class="card" style="width: 15rem;">
 							  <div class="card-img-top" alt="profile photo">
-									<%= link_to user.username, profile_path(lookup: user.user_id) do %>
-										<%= image_tag "#{user.galleries.first.photos.first.url}" %>
+									<%= link_to user.username, profile_path(lookup: user.id) do %>
+										
 									<% end %>
 								</div>
 							  <div class="card-body">
@@ -87,7 +87,7 @@
 				    <div class="col-md-2">
 							<%= link_to post.user.username, profile_path(post.user.id) %>
 							<%= link_to profile_path(lookup: post.user.id) do %>
-								<%= image_tag "#{User.find(post.user.id).picture_url}", class: "small-circular" %>
+								
 							<% end %>
 				    </div>
 				    <div class="col-md-8">
