Add fixed tests
Co-authored-by: Andrew Johnston <72912074+avjohnston@users.noreply.github.com>
Co-authored-by: Ben Fulton <63377504+b-enji-cmd@users.noreply.github.com>
Co-authored-by: Jake Volpe <62768837+javolpe@users.noreply.github.com>
Co-authored-by: Jesus Quezada-Guillen <17693874+jequeza@users.noreply.github.com>
Co-authored-by: Khoa Nguyen <46826902+Omegaeye@users.noreply.github.com>
Co-authored-by: Kris Litman <56943408+krislitman@users.noreply.github.com>
Co-authored-by: Kyle Schulz <54863905+kylejschulz@users.noreply.github.com>

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -23,9 +23,7 @@
 							<% @circle.each do |user| %>
 							<div class="card" style="width: 15rem;">
 							  <div class="card-img-top" alt="profile photo">
-									<%= link_to user.username, profile_path(lookup: user.id) do %>
-										
-									<% end %>
+									<%= link_to user.username, profile_path(lookup: user.id) %>
 								</div>
 							  <div class="card-body">
 							    <p class="card-text"><%= link_to user.username, profile_path(user) %></p>
@@ -86,9 +84,7 @@
 				  <div class="row g-0">
 				    <div class="col-md-2">
 							<%= link_to post.user.username, profile_path(post.user.id) %>
-							<%= link_to profile_path(lookup: post.user.id) do %>
-								
-							<% end %>
+							<%= link_to profile_path(lookup: post.user.id) %>
 				    </div>
 				    <div class="col-md-8">
 				      <div class="card-body">
