Revert "Change oauth to google clinet id"

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,5 @@
-<br><br>
-<center>
-  <img src="https://i.imgur.com/vR7YuGL.png" alt="lvl"> 
-</center><br><br>
+<h1>LEVEL</h1>
+<p>mission goes here<p>
 
 <center>
   <section class="login-form">
