--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -25,9 +25,6 @@
 							  <div class="card-img-top" alt="profile photo">
 									<%= link_to user.username, profile_path(lookup: user.id) %>
 								</div>
-							  <div class="card-body">
-							    <p class="card-text"><%= link_to user.username, profile_path(user) %></p>
-							  </div>
 							</div><br>
 							<% end %>
 				  </div>
@@ -83,8 +80,7 @@
 				<div class="card mb-3 background" style="max-width: 1000px;">
 				  <div class="row g-0">
 				    <div class="col-md-2">
-							<%= link_to post.user.username, profile_path(post.user.id) %>
-							<%= link_to profile_path(lookup: post.user.id) %>
+							<%= link_to post.user.username, profile_path(lookup: post.user.id) %>
 				    </div>
 				    <div class="col-md-8">
 				      <div class="card-body">
